# stellar-statistics

./: .gitignore  README.md  pyproject.toml
src/: definitions.py  demo.ipynb  main.py
src/celestializer/: __init__.py  core.py  definitions.py  identify.py  match.py  preprocess.py  util.py
src/celestializer/image/: ImageNBit.py  RawImage.py  __init__.py
src/celestializer/plot/: __init__.py  rgb_histogram.py
src/demos/: astroquery_test.ipynb  color_value_histograms.ipynb  fit_astrometry_catalog.ipynb  hot_dead_pixels.ipynb  identify_stars.ipynb  iso_comparison.ipynb  list_observation_index.ipynb  show_images.ipynb  shutter_comparison.ipynb  sky_without_stars.ipynb  vignetting_correction.ipynb
src/star_field_analyser/: __init__.py  definitions.py  util.py
src/star_field_analyser/image/: ImageNBit.py  RawImage.py
src/star_field_analyser/plot/: plot_utils.py  rgb_histogram.py
src/star_field_analyzer/: __init__.py  image.py  util.py
src/star_field_analyzer/image/: ImageNBit.py  RawImage.py  __init__.py
src/star_field_analyzer/plot/: __init__.py  plot_utils.py  rgb_histogram.py
